k8s/clusters/folly/networking/gateway-api/cluster-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_CLUSTER_ISSUER}
spec:
  gatewayClassName: cilium
  listeners:
    - name: http-gateway
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https-openclaw
      protocol: HTTPS
      port: 443
      hostname: openclaw.lolwtf.ca
      tls:
        certificateRefs:
          - kind: Secret
            name: openclaw.lolwtf.ca
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https-ai-agents
      protocol: HTTPS
      port: 443
      hostname: ai-agents.lolwtf.ca
      tls:
        certificateRefs:
          - kind: Secret
            name: ai-agents.lolwtf.ca
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
